--- a/app/src/main/res/drawable/ic_pdf.xml
+++ b/app/src/main/res/drawable/ic_pdf.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#CC44E9"
+        android:pathData="M6,2h9l5,5v15a2,2 0,0 1 -2,2H6a2,2 0,0 1 -2,-2V4a2,2 0,0 1 2,-2z"/>
+</vector>
