--- a/app/src/main/res/drawable/bg_icon_green.xml
+++ b/app/src/main/res/drawable/bg_icon_green.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="135"
+        android:startColor="#26A69A"
+        android:endColor="#00897B"
+        android:type="linear" />
+    <corners android:radius="16dp" />
+</shape>
