--- a/app/src/main/res/drawable/bg_icon_purple.xml
+++ b/app/src/main/res/drawable/bg_icon_purple.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="135"
+        android:startColor="#AB47BC"
+        android:endColor="#7B1FA2"
+        android:type="linear" />
+    <corners android:radius="16dp" />
+</shape>
