--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Faten" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<resources>
+    <!-- Theme sombre (optionnel) -->
+    <style name="Theme.MedicalApp" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/purple_secondary</item>
+        <item name="colorPrimaryVariant">@color/purple_primary</item>
+        <item name="colorSecondary">@color/purple_light</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowBackground">#1A1A1A</item>
     </style>
 </resources>
